<resources>
    <string name="app_name">MakeUp</string>
    <string name="Log_in">авторизоваться</string>
    <string name="to_register">зарегистрироваться</string>
    <string name="login"> названия логина</string>
    <string name="username">Имя пользователя</string>
    <string name="ful_name">Ф.И.О.</string>
    <string name="email">email</string>
    <string name="password">Парроль</string>
    <string name="allready_have_account">Уже есть аккаунт? Авторизоваться</string>
    <string name="dont_have_account">У вас нет аккаунта? зарегистрироваться</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
