<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisterActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:id="@+id/animation_lottie_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/youre"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:layout_marginTop="15dp"
        android:id="@+id/username"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/ful_name"
        android:layout_marginTop="15dp"
        android:id="@+id/fullname"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:id="@+id/email"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/to_register"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allready_have_account"
        android:id="@+id/text_login"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="#2962FF"/>

</LinearLayout>