<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:padding="10dp"
tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:id="@+id/animation_lottie_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/biometric"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_background"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:layout_marginTop="15dp"
    android:id="@+id/email"
    android:padding="10dp"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_background"
    android:hint="@string/password"
    android:layout_marginTop="15dp"
    android:id="@+id/password"
    android:inputType="textPassword"
    android:padding="10dp"/>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/login"
    android:text="@string/Log_in"
    android:textColor="@color/colorPrimaryDark"
    android:background="@drawable/button_background"
    android:layout_marginTop="15dp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/dont_have_account"
    android:id="@+id/text_login"
    android:textAlignment="center"
    android:padding="10dp"
    android:textColor="#2962FF"/>

</LinearLayout>